syntax  = "proto3";

package userservice;

option go_package = "proto/userservice";


message CreateRequest {
    string name = 1;
    int32 age = 2;
}

message CreateResponse {
    int32 code = 1;
    string msg = 2;
}

service UserService {
    rpc Create(CreateRequest) returns (CreateResponse);
}